// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Post Create > Form submission > should render form submit error 1`] = `
<div>
  <div
    class="_message_22164d"
  >
    A network error was encountered
  </div>
</div>
`;

exports[`Post Create > should render error  1`] = `
<div>
  <div
    class="_message_22164d"
  >
    A network error was encountered
  </div>
</div>
`;

exports[`Post Create > should render error (unauthorized) 1`] = `
<div>
  <div
    class="_message_22164d"
  >
    401 - Unauthorized
  </div>
</div>
`;

exports[`Post Create > should render loading 1`] = `
<div>
  <div
    class="_message_22164d"
  >
    Loading...
  </div>
</div>
`;

exports[`Post Create > should render post create  1`] = `
<div>
  <section
    class="_PostCreate_22164d"
  >
    <div
      class="_header_22164d"
    >
      <h2>
        Create
      </h2>
    </div>
    <form
      class="_form_22164d"
    >
      <div
        class="_inputGroup_22164d"
      >
        <label
          class="_label_22164d"
          for="title"
        >
          Title
        </label>
        <input
          class="_input_22164d"
          id="title"
          name="title"
          type="text"
          value=""
        />
      </div>
      <div
        class="_textareaGroup_22164d"
      >
        <label
          class="_label_22164d"
          for="content"
        >
          Content
        </label>
        <textarea
          class="_textarea_22164d"
          id="content"
          name="content"
          type="text"
        />
      </div>
      <div
        class="_selectGroup_22164d"
      >
        <label
          class="_label_22164d"
          for="status"
        >
          Status
        </label>
        <select
          class="_select_22164d"
          id="status"
          name="status"
        >
          <option
            value="true"
          >
            Published
          </option>
          <option
            value="false"
          >
            Unpublished
          </option>
        </select>
      </div>
      <div
        class="_buttonContainer_22164d"
      >
        <input
          class="_submit_22164d"
          type="submit"
          value="Submit"
        />
      </div>
      <div
        class="_buttonContainer_22164d"
      >
        <a
          data-discover="true"
          href="/dashboard/posts"
        >
          <button
            class="_cancel_22164d"
          >
            Cancel
          </button>
        </a>
      </div>
    </form>
  </section>
</div>
`;
